--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 	    <title>Backwords</title>
-	    <script type="module" src="load.js" defer></script>
+	    <script type="module" src="js/load.js" defer></script>
 	    <link rel="stylesheet" href="main.css" />
 	</head>
 	<body>
